fixed bug / dealt with width reposinve font-size issues of AsideSection on small devices

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -113,20 +113,6 @@
     top:20px !important;
   }
   .aside-section #logo a{
-    font-size:9.5vh !important;
-  }
-  .aside-section #logo span{
-    font-size:10vh !important;
-  }
-  .aside-section .nav li a{
-    font-size:5.5vh !important;
-  }
-}
-@media (max-height: 450px) and (max-width: 660px) {
-  .home-details p{
-    font-size:3.8vh !important;
-  }
-  .aside-section #logo a{
     font-size:1.8vh !important;
   }
   .aside-section #logo span{
@@ -134,5 +120,19 @@
   }
   .aside-section .nav li a{
     font-size:1vh !important;
+  }
+}
+@media (max-height: 450px) and (max-width: 660px) {
+  .home-details p{
+    font-size:3.8vh !important;
+  }
+  .aside-section #logo a{
+    font-size:5.5vh !important;
+  }
+  .aside-section #logo span{
+    font-size:6.1vh !important;
+  }
+  .aside-section .nav li a{
+    font-size:3.8vh !important;
   }
 }
